--- a/style.css
+++ b/style.css
@@ -136,18 +136,7 @@ button[disabled] {
     font-size: 0.8rem;
   }
 }
-Footer
-© 2022 GitHub, Inc.
-Footer navigation
-Terms
-Privacy
-Security
-Status
-Docs
-Contact GitHub
-Pricing
-API
-Training
-Blog
-About
-Week3-Password-Generator/style.css at main · GongTianchou/Week3-Password-Generator
+
+.author {
+  text-align: center;
+}
